test/bad/nil-field.go
package main
import "fmt"

type S struct {
  field int
}

func main() {
  nil.field = 5
  fmt.Print(5)
}
